test them plugin for tailwincss

--- a/registry/src/components/Button/index.css
+++ b/registry/src/components/Button/index.css
@@ -73,23 +73,27 @@
 
   /* Button themes */
   .btn.primary {
-    @apply border-[var(--primary-border-color)] bg-[var(--primary-bg-color)] text-[var(--primary-text-color)] enabled:hover:border-[var(--primary-hover-border-color)] enabled:hover:bg-[var(--primary-hover-bg-color)] enabled:hover:text-[var(--primary-hover-text-color)] enabled:active:border-[var(--primary-active-border-color)] enabled:active:bg-[var(--primary-active-bg-color)]  enabled:active:text-[var(--primary-active-text-color)];
+    @apply border-[var(--btn-primary-border-color)] bg-[var(--btn-primary-bg-color)] text-[var(--btn-primary-text-color)] enabled:hover:border-[var(--btn-primary-hover-border-color)] enabled:hover:bg-[var(--btn-primary-hover-bg-color)] enabled:hover:text-[var(--btn-primary-hover-text-color)] enabled:active:border-[var(--btn-primary-active-border-color)] enabled:active:bg-[var(--btn-primary-active-bg-color)]  enabled:active:text-[var(--btn-primary-active-text-color)];
   }
 
   .btn.neutral {
-    @apply border-[var(--neutral-border-color)] bg-[var(--neutral-bg-color)] text-[var(--neutral-text-color)] enabled:hover:border-[var(--neutral-hover-border-color)] enabled:hover:bg-[var(--neutral-hover-bg-color)] enabled:hover:text-[var(--neutral-hover-text-color)] enabled:active:border-[var(--neutral-active-border-color)] enabled:active:bg-[var(--neutral-active-bg-color)] enabled:active:text-[var(--neutral-active-text-color)];
+    @apply border-[var(--btn-neutral-border-color)] bg-[var(--btn-neutral-bg-color)] text-[var(--btn-neutral-text-color)] enabled:hover:border-[var(--btn-neutral-hover-border-color)] enabled:hover:bg-[var(--btn-neutral-hover-bg-color)] enabled:hover:text-[var(--btn-neutral-hover-text-color)] enabled:active:border-[var(--btn-neutral-active-border-color)] enabled:active:bg-[var(--btn-neutral-active-bg-color)] enabled:active:text-[var(--btn-neutral-active-text-color)];
   }
 
   .btn.danger {
-    @apply border-[var(--danger-border-color)] bg-[var(--danger-bg-color)] text-[var(--danger-text-color)] enabled:hover:border-[var(--danger-hover-border-color)] enabled:hover:bg-[var(--danger-hover-bg-color)] enabled:hover:text-[var(--danger-hover-text-color)] enabled:active:border-[var(--danger-active-border-color)] enabled:active:bg-[var(--danger-active-bg-color)] enabled:active:text-[var(--danger-active-text-color)];
+    @apply border-[var(--btn-danger-border-color)] bg-[var(--btn-danger-bg-color)] text-[var(--btn-danger-text-color)] enabled:hover:border-[var(--btn-danger-hover-border-color)] enabled:hover:bg-[var(--btn-danger-hover-bg-color)] enabled:hover:text-[var(--btn-danger-hover-text-color)] enabled:active:border-[var(--btn-danger-active-border-color)] enabled:active:bg-[var(--btn-danger-active-bg-color)] enabled:active:text-[var(--btn-danger-active-text-color)];
   }
 
   .btn.success {
-    @apply border-[var(--success-border-color)] bg-[var(--success-bg-color)] text-[var(--success-text-color)] enabled:hover:border-[var(--success-hover-border-color)] enabled:hover:bg-[var(--success-hover-bg-color)] enabled:hover:text-[var(--success-hover-text-color)] enabled:active:border-[var(--success-active-border-color)] enabled:active:bg-[var(--success-active-bg-color)] enabled:active:text-[var(--success-active-text-color)];
+    @apply border-[var(--btn-success-border-color)] bg-[var(--btn-success-bg-color)] text-[var(--btn-success-text-color)] enabled:hover:border-[var(--btn-success-hover-border-color)] enabled:hover:bg-[var(--btn-success-hover-bg-color)] enabled:hover:text-[var(--btn-success-hover-text-color)] enabled:active:border-[var(--btn-success-active-border-color)] enabled:active:bg-[var(--btn-success-active-bg-color)] enabled:active:text-[var(--btn-success-active-text-color)];
   }
 
   .btn.info {
-    @apply border-[var(--info-border-color)] bg-[var(--info-bg-color)] text-[var(--info-text-color)] enabled:hover:border-[var(--info-hover-border-color)] enabled:hover:bg-[var(--info-hover-bg-color)] enabled:hover:text-[var(--info-hover-text-color)] enabled:active:border-[var(--info-active-border-color)] enabled:active:bg-[var(--info-active-bg-color)] enabled:active:text-[var(--info-active-text-color)];
+    @apply border-[var(--btn-info-border-color)] bg-[var(--btn-info-bg-color)] text-[var(--btn-info-text-color)] enabled:hover:border-[var(--btn-info-hover-border-color)] enabled:hover:bg-[var(--btn-info-hover-bg-color)] enabled:hover:text-[var(--btn-info-hover-text-color)] enabled:active:border-[var(--btn-info-active-border-color)] enabled:active:bg-[var(--btn-info-active-bg-color)] enabled:active:text-[var(--btn-info-active-text-color)];
+  }
+
+  .btn.custom {
+    @apply border-[var(--btn-custom-border-color)] bg-[var(--btn-custom-bg-color)] text-[var(--btn-custom-text-color)] enabled:hover:border-[var(--btn-custom-hover-border-color)] enabled:hover:bg-[var(--btn-custom-hover-bg-color)] enabled:hover:text-[var(--btn-custom-hover-text-color)] enabled:active:border-[var(--btn-custom-active-border-color)] enabled:active:bg-[var(--btn-custom-active-bg-color)] enabled:active:text-[var(--btn-custom-active-text-color)];
   }
 
   .btn.filled {
