--- a/registry/src/components/Button/index.css
+++ b/registry/src/components/Button/index.css
@@ -1,159 +1,148 @@
 @import '../loading-mask.css';
 @import '../global.css';
 
-@layer components {
-  .btn:not(.hidden) {
-    @apply text-body-compact-02 flex items-center justify-center gap-2 whitespace-nowrap rounded-md px-4 transition-colors duration-200 ease-out;
-  }
+.btn:not(.hidden) {
+  @apply text-body-compact-02 flex items-center justify-center gap-2 whitespace-nowrap rounded-md px-4 transition-colors duration-200 ease-out;
+}
 
-  .btn:disabled {
-    @apply cursor-not-allowed border-none !border-[var(--btn-disabled-border-color)] !bg-[var(--btn-disabled-bg-color)] !text-[var(--btn-disabled-text-color)];
-  }
+.btn:active {
+  @apply translate-y-[1px];
+}
 
-  .btn:active {
-    @apply translate-y-[1px];
-  }
+.btn:active:disabled {
+  @apply translate-y-0;
+}
 
-  .btn:active:disabled {
-    @apply translate-y-0;
-  }
+.btn.small {
+  @apply h-8 min-h-8 px-3;
+}
 
-  .btn.small {
-    @apply h-8 min-h-8 px-3;
-  }
+.btn.medium {
+  @apply h-10 min-h-10 px-4;
+}
 
-  .btn.medium {
-    @apply h-10 min-h-10 px-4;
-  }
+.btn.large {
+  @apply h-12 min-h-12;
+}
 
-  .btn.large {
-    @apply h-12 min-h-12;
-  }
+.btn.icon-only {
+  @apply flex items-center justify-center rounded-md;
+}
 
-  .btn.icon-only {
-    @apply flex items-center justify-center rounded-md;
-  }
+.btn.icon-only.small {
+  @apply h-8 w-8 px-2;
+}
 
-  .btn.icon-only.small {
-    @apply h-8 w-8 px-2;
-  }
+.btn.icon-only.medium {
+  @apply h-10 w-10 px-3;
+}
 
-  .btn.icon-only.medium {
-    @apply h-10 w-10 px-3;
-  }
+.btn.icon-only.large {
+  @apply h-12 w-12 p-4;
+}
 
-  .btn.icon-only.large {
-    @apply h-12 w-12 p-4;
-  }
+.btn.icon-only.xsmall {
+  @apply px-3;
+}
 
-  .btn.icon-only.xsmall {
-    @apply px-3;
-  }
+/* group */
+.btn-group {
+  @apply text-body-compact-02 relative flex h-10 w-full flex-row items-center justify-start truncate border-gray-200;
+}
 
-  /* group */
-  .btn-group {
-    @apply text-body-compact-02 relative flex h-10 w-full flex-row items-center justify-start truncate border-gray-200;
-  }
+.btn-group.start {
+  @apply gap-2 rounded-md rounded-r-none border border-r-0 bg-white px-3 py-2 text-gray-500 after:absolute after:right-0 after:top-1/4 after:h-1/2 after:w-[0.5px] after:bg-gray-200 focus:z-10 focus:after:hidden enabled:hover:text-gray-700 enabled:active:text-black disabled:cursor-not-allowed;
+}
 
-  .btn-group.start {
-    @apply gap-2 rounded-md rounded-r-none border border-r-0 bg-white px-3 py-2 text-gray-500 after:absolute after:right-0 after:top-1/4 after:h-1/2 after:w-[0.5px] after:bg-gray-200 focus:z-10 focus:after:hidden enabled:hover:text-gray-700 enabled:active:text-black disabled:cursor-not-allowed;
-  }
+.btn-group.middle {
+  @apply gap-2 rounded-none border-y bg-white px-3 py-2 text-gray-500 before:absolute before:left-0 before:top-1/4 before:h-1/2 before:w-[0.5px] before:bg-gray-200 after:absolute after:right-0 after:top-1/4 after:h-1/2 after:w-[0.5px] after:bg-gray-200 focus:z-10 focus:before:hidden focus:after:hidden enabled:hover:text-gray-700 enabled:active:text-black disabled:cursor-not-allowed;
+}
 
-  .btn-group.middle {
-    @apply gap-2 rounded-none border-y bg-white px-3 py-2 text-gray-500 before:absolute before:left-0 before:top-1/4 before:h-1/2 before:w-[0.5px] before:bg-gray-200 after:absolute after:right-0 after:top-1/4 after:h-1/2 after:w-[0.5px] after:bg-gray-200 focus:z-10 focus:before:hidden focus:after:hidden enabled:hover:text-gray-700 enabled:active:text-black disabled:cursor-not-allowed;
-  }
+.btn-group.end {
+  @apply gap-2 rounded-md rounded-l-none border border-l-0 bg-white px-3 py-2 text-gray-500 before:absolute before:left-0 before:top-1/4 before:h-1/2 before:w-[0.5px] before:bg-gray-200 focus:z-10 focus:before:hidden enabled:hover:text-gray-700 enabled:active:text-black disabled:cursor-not-allowed;
+}
 
-  .btn-group.end {
-    @apply gap-2 rounded-md rounded-l-none border border-l-0 bg-white px-3 py-2 text-gray-500 before:absolute before:left-0 before:top-1/4 before:h-1/2 before:w-[0.5px] before:bg-gray-200 focus:z-10 focus:before:hidden enabled:hover:text-gray-700 enabled:active:text-black disabled:cursor-not-allowed;
-  }
+.btn-group.active {
+  @apply bg-gray-100 text-black enabled:hover:text-black;
+}
 
-  .btn-group.active {
-    @apply bg-gray-100 text-black enabled:hover:text-black;
-  }
+/* Button themes */
+.btn {
+  @apply border;
+  border-color: var(--button-default-border);
+  background-color: var(--button-default-bg);
+  color: var(--button-default-text);
+}
 
-  /* Button themes */
-  .btn.primary {
-    @apply border-[var(--btn-primary-border-color)] bg-[var(--btn-primary-bg-color)] text-[var(--btn-primary-text-color)] enabled:hover:border-[var(--btn-primary-hover-border-color)] enabled:hover:bg-[var(--btn-primary-hover-bg-color)] enabled:hover:text-[var(--btn-primary-hover-text-color)] enabled:active:border-[var(--btn-primary-active-border-color)] enabled:active:bg-[var(--btn-primary-active-bg-color)]  enabled:active:text-[var(--btn-primary-active-text-color)];
-  }
+.btn:enabled:hover {
+  border-color: var(--button-hover-border);
+  background-color: var(--button-hover-bg);
+  color: var(--button-hover-text);
+}
 
-  .btn.neutral {
-    @apply border-[var(--btn-neutral-border-color)] bg-[var(--btn-neutral-bg-color)] text-[var(--btn-neutral-text-color)] enabled:hover:border-[var(--btn-neutral-hover-border-color)] enabled:hover:bg-[var(--btn-neutral-hover-bg-color)] enabled:hover:text-[var(--btn-neutral-hover-text-color)] enabled:active:border-[var(--btn-neutral-active-border-color)] enabled:active:bg-[var(--btn-neutral-active-bg-color)] enabled:active:text-[var(--btn-neutral-active-text-color)];
-  }
+.btn:enabled:active {
+  border-color: var(--button-active-border);
+  background-color: var(--button-active-bg);
+  color: var(--button-active-text);
+}
 
-  .btn.danger {
-    @apply border-[var(--btn-danger-border-color)] bg-[var(--btn-danger-bg-color)] text-[var(--btn-danger-text-color)] enabled:hover:border-[var(--btn-danger-hover-border-color)] enabled:hover:bg-[var(--btn-danger-hover-bg-color)] enabled:hover:text-[var(--btn-danger-hover-text-color)] enabled:active:border-[var(--btn-danger-active-border-color)] enabled:active:bg-[var(--btn-danger-active-bg-color)] enabled:active:text-[var(--btn-danger-active-text-color)];
-  }
+.btn.filled {
+  @apply text-white hover:text-white active:text-white;
+}
 
-  .btn.success {
-    @apply border-[var(--btn-success-border-color)] bg-[var(--btn-success-bg-color)] text-[var(--btn-success-text-color)] enabled:hover:border-[var(--btn-success-hover-border-color)] enabled:hover:bg-[var(--btn-success-hover-bg-color)] enabled:hover:text-[var(--btn-success-hover-text-color)] enabled:active:border-[var(--btn-success-active-border-color)] enabled:active:bg-[var(--btn-success-active-bg-color)] enabled:active:text-[var(--btn-success-active-text-color)];
-  }
+.btn.outlined {
+  @apply border bg-transparent;
+}
 
-  .btn.info {
-    @apply border-[var(--btn-info-border-color)] bg-[var(--btn-info-bg-color)] text-[var(--btn-info-text-color)] enabled:hover:border-[var(--btn-info-hover-border-color)] enabled:hover:bg-[var(--btn-info-hover-bg-color)] enabled:hover:text-[var(--btn-info-hover-text-color)] enabled:active:border-[var(--btn-info-active-border-color)] enabled:active:bg-[var(--btn-info-active-bg-color)] enabled:active:text-[var(--btn-info-active-text-color)];
-  }
+.btn.ghost {
+  @apply border-none bg-transparent;
+}
 
-  .btn.custom {
-    @apply border-[var(--btn-custom-border-color)] bg-[var(--btn-custom-bg-color)] text-[var(--btn-custom-text-color)] enabled:hover:border-[var(--btn-custom-hover-border-color)] enabled:hover:bg-[var(--btn-custom-hover-bg-color)] enabled:hover:text-[var(--btn-custom-hover-text-color)] enabled:active:border-[var(--btn-custom-active-border-color)] enabled:active:bg-[var(--btn-custom-active-bg-color)] enabled:active:text-[var(--btn-custom-active-text-color)];
-  }
+.btn.glass {
+  @apply border-none;
+}
 
-  .btn.filled {
-    @apply border-none text-white enabled:hover:text-white enabled:active:text-white;
-  }
+.btn.outlined.neutral,
+.btn.ghost.neutral {
+  @apply enabled:hover:bg-gray-200/50 enabled:active:bg-gray-200;
+}
 
-  .btn.outlined {
-    @apply border bg-transparent;
-  }
+.btn.outlined.primary,
+.btn.ghost.primary {
+  @apply enabled:hover:bg-orange-50/50 enabled:active:bg-orange-50;
+}
 
-  .btn.ghost {
-    @apply border-none bg-transparent;
-  }
+.btn.outlined.danger,
+.btn.ghost.danger {
+  @apply enabled:hover:bg-red-50/50 enabled:active:bg-red-50;
+}
 
-  .btn.glass {
-    @apply border-none;
-  }
+.btn.outlined.success,
+.btn.ghost.success {
+  @apply enabled:hover:bg-green-50/50 enabled:active:bg-green-50;
+}
 
-  .btn.outlined.neutral,
-  .btn.ghost.neutral {
-    @apply enabled:hover:bg-gray-200/50 enabled:active:bg-gray-200;
-  }
+.btn.outlined.info,
+.btn.ghost.info {
+  @apply enabled:hover:bg-blue-50/50 enabled:active:bg-blue-50;
+}
 
-  .btn.outlined.primary,
-  .btn.ghost.primary {
-    @apply enabled:hover:bg-orange-50/50 enabled:active:bg-orange-50;
-  }
+.btn.glass.neutral {
+  @apply bg-gray-100/50  enabled:hover:bg-gray-200/50 enabled:active:bg-gray-300/50;
+}
 
-  .btn.outlined.danger,
-  .btn.ghost.danger {
-    @apply enabled:hover:bg-red-50/50 enabled:active:bg-red-50;
-  }
+.btn.glass.primary {
+  @apply bg-orange-50/50 enabled:hover:bg-orange-100/50 enabled:active:bg-orange-200/50;
+}
 
-  .btn.outlined.success,
-  .btn.ghost.success {
-    @apply enabled:hover:bg-green-50/50 enabled:active:bg-green-50;
-  }
+.btn.glass.danger {
+  @apply bg-red-50/50 enabled:hover:bg-red-100/50 enabled:active:bg-red-200/50;
+}
 
-  .btn.outlined.info,
-  .btn.ghost.info {
-    @apply enabled:hover:bg-blue-50/50 enabled:active:bg-blue-50;
-  }
+.btn.glass.success {
+  @apply bg-green-50/50 enabled:hover:bg-green-100/50 enabled:active:bg-green-200/50;
+}
 
-  .btn.glass.neutral {
-    @apply bg-gray-100/50  enabled:hover:bg-gray-200/50 enabled:active:bg-gray-300/50;
-  }
-
-  .btn.glass.primary {
-    @apply bg-orange-50/50 enabled:hover:bg-orange-100/50 enabled:active:bg-orange-200/50;
-  }
-
-  .btn.glass.danger {
-    @apply bg-red-50/50 enabled:hover:bg-red-100/50 enabled:active:bg-red-200/50;
-  }
-
-  .btn.glass.success {
-    @apply bg-green-50/50 enabled:hover:bg-green-100/50 enabled:active:bg-green-200/50;
-  }
-
-  .btn.glass.info {
-    @apply bg-blue-50/50  enabled:hover:bg-blue-100/50 enabled:active:bg-blue-200/50;
-  }
+.btn.glass.info {
+  @apply bg-blue-50/50  enabled:hover:bg-blue-100/50 enabled:active:bg-blue-200/50;
 }
