--- a/app/globals.css
+++ b/app/globals.css
@@ -5,7 +5,7 @@
 @import './prose.css';
 @import './fonts.css';
 
-:root {
+:root * {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
