t-3:  case for alias (css/plugin)

--- a/registry/src/components/Button/index.css
+++ b/registry/src/components/Button/index.css
@@ -1,4 +1,4 @@
-@import '../theme/alias/background.css';
+/* @import '../theme/alias/background.css'; */
 
 @config "./tailwind.button.config.ts";
 
