--- a/registry/src/components/theme/alias/text-icon-colors.variables.css
+++ b/registry/src/components/theme/alias/text-icon-colors.variables.css
@@ -15,18 +15,18 @@
   --par-color-text-surface-item-neutral-pronounced-selected: var(--par-color-text-primary-inverse);
   --par-color-text-surface-item-accent-subtle-selected: var(--par-color-text-primary);
   --par-color-text-surface-item-accent-pronounced-selected: var(--par-color-text-primary-inverse);
-  --par-color-text-surface-item-disabled: rgba(var(--par-color-text-primary), 0.5);
+  --par-color-text-surface-item-disabled: rgb(from var(--par-color-text-primary) r g b / 0.5);
 
   --par-color-text-field-placeholder: var(--par-gray-600);
   --par-color-text-field-alternative-placeholder: var(--par-gray-550);
   --par-color-text-field-filled: var(--par-color-text-primary);
   --par-color-text-field-label: var(--par-color-text-secondary);
-  --par-color-text-field-disabled: rgba(var(--par-color-text-field-placeholder), 0.5);
+  --par-color-text-field-disabled: rgb(from var(--par-color-text-field-placeholder) r g b / 0.5);
   --par-color-text-field-readonly: var(--par-color-text-primary);
   --par-color-text-field-invalid: var(--par-color-text-primary);
 
   --par-color-icon-field-button-enabled: var(--par-gray-500);
   --par-color-icon-field-button-hovered: var(--par-gray-600);
   --par-color-icon-field-button-pressed: var(--par-gray-700);
-  --par-color-icon-field-button-disabled: rgba(var(--par-gray-500), 0.5);
+  --par-color-icon-field-button-disabled: rgb(from var(--par-gray-500) r g b / 0.5);
 }
