--- a/registry/src/components/global.css
+++ b/registry/src/components/global.css
@@ -1,21 +1,34 @@
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
+
+@config '../../tailwind.config.js';
+
 *:focus-visible,
 *[data-focus-visible='true'] {
   outline: 2px solid rgba(22, 22, 22, 1);
   outline-offset: -2px; /* overide border */
 }
 
-svg.lucide.small {
+svg.lucide.small,
+svg.lucide.xsmall,
+svg.lucide.sm,
+svg.lucide.xs {
   @apply h-3 w-3;
 }
 
-svg.lucide {
+svg.lucide,
+svg.lucide.medium,
+svg.lucide.md {
   @apply box-border h-4 w-4;
 }
 
-svg.lucide.large {
+svg.lucide.large,
+svg.lucide.lg {
   @apply h-5 w-5;
 }
 
-svg.lucide.xlarge {
+svg.lucide.xlarge,
+svg.lucide.xl {
   @apply h-6 w-6;
 }
