feat (corner indicator): - add base corner indicator - fix center position in badge - add color for dot

--- a/registry/src/components/Dot/index.css
+++ b/registry/src/components/Dot/index.css
@@ -23,3 +23,45 @@
 .dot.lg {
   @apply h-3 w-3;
 }
+
+/* theme */
+
+.dot.gray {
+  @apply bg-gray-600;
+}
+
+.dot.orange {
+  @apply bg-orange-600;
+}
+
+.dot.cyan {
+  @apply bg-cyan-600;
+}
+
+.dot.violet {
+  @apply bg-violet-600;
+}
+
+.dot.green {
+  @apply bg-green-600;
+}
+
+.dot.red {
+  @apply bg-red-600;
+}
+
+.dot.yellow {
+  @apply bg-yellow-600;
+}
+
+.dot.blue {
+  @apply bg-blue-600;
+}
+
+.dot.lime {
+  @apply bg-lime-600;
+}
+
+.dot.glass {
+  @apply opacity-50;
+}
