--- a/registry/src/components/Badge/index.css
+++ b/registry/src/components/Badge/index.css
@@ -1,5 +1,5 @@
 .badge {
-  @apply text-label-01 flex w-fit select-none items-center gap-1 truncate rounded-full border border-none font-semibold;
+  @apply text-label-01 flex w-fit select-none items-center justify-center gap-1 truncate rounded-full border border-none font-semibold;
 }
 
 .badge.md {
