--- a/registry/src/components/Badge/index.css
+++ b/registry/src/components/Badge/index.css
@@ -1,5 +1,5 @@
 .badge {
-  @apply text-label-01 flex w-fit select-none items-center justify-center gap-1 truncate rounded-full border border-none font-semibold;
+  @apply text-label-01 flex w-fit min-w-6 select-none items-center justify-center gap-1 truncate rounded-full border border-none px-1.5 py-1 font-semibold;
 }
 
 .badge.md {
@@ -112,37 +112,37 @@
 }
 
 .badge.filled.gray {
-  @apply border-[var(--par-color-border-badge-fill-gray)] bg-gray-600 text-gray-50;
+  @apply border-gray-600 bg-gray-600 text-gray-50;
 }
 
 .badge.filled.red {
-  @apply border-[var(--par-color-border-badge-fill-red)] bg-red-600 text-red-50;
+  @apply border-red-600 bg-red-600 text-red-50;
 }
 
 .badge.filled.green {
-  @apply border-[var(--par-color-border-badge-fill-green)] bg-green-600 text-green-50;
+  @apply border-green-600 bg-green-600 text-green-50;
 }
 
 .badge.filled.yellow {
-  @apply border-[var(--par-color-border-badge-fill-yellow)] bg-yellow-600 text-yellow-50;
+  @apply border-yellow-600 bg-yellow-600 text-yellow-50;
 }
 
 .badge.filled.blue {
-  @apply border-[var(--par-color-border-badge-fill-blue)] bg-blue-600 text-blue-50;
+  @apply border-blue-600 bg-blue-600 text-blue-50;
 }
 
 .badge.filled.orange {
-  @apply border-[var(--par-color-border-badge-fill-orange)] bg-orange-600 text-orange-50;
+  @apply border-orange-600 bg-orange-600 text-orange-50;
 }
 
 .badge.filled.cyan {
-  @apply border-[var(--par-color-border-badge-fill-cyan)] bg-cyan-600 text-cyan-50;
+  @apply border-cyan-600 bg-cyan-600 text-cyan-50;
 }
 
 .badge.filled.violet {
-  @apply border-[var(--par-color-border-badge-fill-violet)] bg-violet-600 text-violet-50;
+  @apply border-violet-600 bg-violet-600 text-violet-50;
 }
 
 .badge.filled.lime {
-  @apply border-[var(--par-color-border-badge-fill-lime)] bg-lime-600 text-lime-50;
+  @apply border-lime-600 bg-lime-600 text-lime-50;
 }
