--- a/registry/src/components/CornerIndicator/index.css
+++ b/registry/src/components/CornerIndicator/index.css
@@ -15,20 +15,24 @@
 /* position */
 .corner-indicator-container.top-right > .badge,
 .corner-indicator-container.top-right > .dot {
-  @apply right-0 top-0 -translate-y-1/2 translate-x-1/2;
+  transform: translate(calc(50% + var(--par-offset)), calc(-50% - var(--par-offset)));
+  @apply right-0 top-0;
 }
 
 .corner-indicator-container.top-left > .badge,
 .corner-indicator-container.top-left > .dot {
-  @apply left-0 top-0 -translate-x-1/2 -translate-y-1/2;
+  transform: translate(calc(-50% - var(--par-offset)), calc(-50% - var(--par-offset)));
+  @apply left-0 top-0;
 }
 
 .corner-indicator-container.bottom-right > .badge,
 .corner-indicator-container.bottom-right > .dot {
-  @apply bottom-0 right-0 translate-x-1/2 translate-y-1/2;
+  transform: translate(calc(+50% + var(--par-offset)), calc(+50% + var(--par-offset)));
+  @apply bottom-0 right-0;
 }
 
 .corner-indicator-container.bottom-left > .badge,
 .corner-indicator-container.bottom-left > .dot {
-  @apply bottom-0 left-0 -translate-x-1/2 translate-y-1/2;
+  transform: translate(calc(-50% - var(--par-offset)), calc(+50% + var(--par-offset)));
+  @apply bottom-0 left-0;
 }
