--- a/registry/src/components/Checkbox/index.css
+++ b/registry/src/components/Checkbox/index.css
@@ -1,10 +1,10 @@
 /* Checkbox & Radio */
-input[type='checkbox']:disabled {
+input[type='checkbox'].par-input:disabled {
   opacity: 0.5;
 }
 
 /* Override browser's default checkbox input */
-input[type='checkbox'] {
+input[type='checkbox'].par-input {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
@@ -20,11 +20,11 @@ input[type='checkbox'] {
   background-color: white;
 }
 
-input[type='checkbox']:focus {
+input[type='checkbox'].par-input:focus {
   border-radius: 0.1875rem;
 }
 
-input[type='checkbox']:checked {
+input[type='checkbox'].par-input:checked {
   border: 0.1875rem solid transparent;
   transition: all 150ms cubic-bezier(0.4, 0, 0.2, 1);
   background-color: #4294ff;
@@ -33,7 +33,7 @@ input[type='checkbox']:checked {
   background-image: url("data:image/svg+xml;utf8,<svg height='12px' width='12px' role='img' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'><path fill='none' d='M20 6L9 17L4 12' stroke='white' stroke-width='3.5' stroke-linecap='round' stroke-linejoin='round'></path></svg>");
 }
 
-input[type='checkbox']:indeterminate {
+input[type='checkbox'].par-input:indeterminate {
   transition: all 150ms cubic-bezier(0.4, 0, 0.2, 1);
   background-color: white;
   background-position: center center;
