--- a/registry/src/components/Chip/index.css
+++ b/registry/src/components/Chip/index.css
@@ -116,7 +116,7 @@
 }
 
 .chip.outlined[aria-disabled='true'] {
-  @apply pointer-events-none border-gray-200 text-gray-400;
+  @apply pointer-events-none !opacity-50;
 }
 
 .chip.outlined.orange {
@@ -157,7 +157,7 @@
 }
 
 .chip.glass[aria-disabled='true'] {
-  @apply pointer-events-none bg-gray-200 text-gray-400;
+  @apply pointer-events-none !opacity-50;
 }
 
 .chip.glass {
