--- a/registry/src/components/tag/index.css
+++ b/registry/src/components/tag/index.css
@@ -9,11 +9,15 @@
 }
 
 .tag > .tag-icon {
-  @apply rounded-full p-0;
+  @apply h-4 w-4 overflow-hidden rounded-full p-0;
+}
+
+.tag > .tag-icon:has(img) {
+  @apply h-[1.125rem] w-[1.125rem] overflow-hidden rounded-full p-0;
 }
 
 .tag img {
-  @apply rounded-full;
+  @apply h-[1.125rem]  w-[1.125rem] rounded-full;
 }
 
 .tag[aria-disabled='true'] img {
@@ -31,26 +35,14 @@
   @apply h-6 gap-1 px-1.5;
 }
 
-.tag.small .tag-icon:has(img) {
-  @apply h-[1.125rem] min-h-[1.125rem] w-[1.125rem] min-w-[1.125rem];
-}
-
 /* Medium size */
 .tag.medium {
   @apply h-7 gap-1.5 px-1.5;
 }
 
-.tag.medium .tag-icon:has(img) {
-  @apply h-[1.375rem] min-h-[1.375rem] w-[1.375rem]  min-w-[1.375rem];
-}
-
 /* Large size */
 .tag.large {
   @apply h-8 gap-1.5 px-2;
-}
-
-.tag.large .tag-icon:has(img) {
-  @apply h-[1.625rem] min-h-[1.625rem] w-[1.625rem] min-w-[1.625rem];
 }
 
 /* tag theme*/
@@ -59,7 +51,7 @@
   @apply border-blue-500 bg-blue-500 text-blue-500;
 }
 
-.tag.accent > .tag-icon {
+.tag.accent > .tag-icon.tag-close-btn {
   @apply text-blue-500 hover:bg-blue-200 hover:text-blue-600 active:bg-blue-300 active:text-blue-700;
 }
 
@@ -67,7 +59,7 @@
   @apply border-gray-500 bg-gray-500 text-gray-500;
 }
 
-.tag.neutral > .tag-icon {
+.tag.neutral > .tag-icon.tag-close-btn {
   @apply text-gray-500 hover:bg-gray-200 hover:text-gray-600 active:bg-gray-300 active:text-gray-700;
 }
 
